<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display_scaletype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/maxresdefault"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_margin=".5dp">

        <Button
            android:id="@+id/center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center"/>

        <Button
            android:id="@+id/centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centerCrop"/>

        <Button
            android:id="@+id/fitEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fitEnd"/>

        <Button
            android:id="@+id/matrix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matrix"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_margin=".5dp">

        <Button
            android:id="@+id/centerInside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centerInside"/>

        <Button
            android:id="@+id/fitStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fitStart"/>

        <Button
            android:id="@+id/fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fitCenter"/>

        <Button
            android:id="@+id/fitXY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fitXY"/>

    </LinearLayout>

</LinearLayout>